# noneable

./: LICENSE  README.md  pyproject.toml
src/noneable/: __init__.py  noneable.py
tests/: test_noneable.py
